1.6.6 - 2018-XX-XX

  1. Hadoop 3 build compatibility.

  2. Change Maven project structure to be better compatible with IDEs.

  3. Support Hadoop 3.


1.6.5 - 2018-04-12

  1. Add support for using Cloud Storage Rewrite requests for copy operation:

       fs.gs.copy.with.rewrite.enable (default: false)

     This allows to copy files between different locations and storage classes.

  2. Update all dependencies to latest versions.

  3. Decrease default value for max requests per batch from 1,000 to 30.

  4. Make max requests per batch value configurable with property:

       fs.gs.max.requests.per.batch (default: 30)


1.6.4 - 2018-03-19

  1. Fixed an issue where JSON auth files containing user auth e.g.
     application_default_credentials.json does not work with
     google.cloud.auth.service.account.json.keyfile

  2. Honor GOOGLE_APPLICATION_DEFAULT_CREDENTIALS environment variable. For
     Google Application Default Credentials (but not other defaults).

  3. Make fs.gs.project.id optional. It is still required for listing buckets,
     creating buckets, and entire BigQuery connector.

  4. Disable GCS Metadata Cache by default (e.g. set default value of
     `fs.gs.metadata.cache.enable` property to `false`).

  5. Support GCS Requester Pays feature that could be configured with new
     properties:

       fs.gs.requester.pays.mode (default=DISABLED)
       fs.gs.requester.pays.project.id (no default value)
       fs.gs.requester.pays.buckets (no default value)

  6. Add support for specifying marker files pattern that should be copied
     last during folder rename operation. Pattern is configured with property:

       fs.gs.marker.file.pattern


1.6.3 - 2018-01-25

  1. Use new GCS batch requests endpoint.

  6. Disable GCS Metadata Cache by default (e.g. set default value of
     `fs.gs.metadata.cache.enable` property to `false`).


1.6.2 - 2017-11-21

  1. Wire HTTP transport settings into Credential logic.


1.6.1 - 2017-04-14
