@@ -6,6 +6,9 @@
 
   3. Support Hadoop 3.
 
+  4. Fix thread leaks that were occurring when YARN log aggregation uploaded
+     logs to GCS.
+
 
 1.6.5 - 2018-04-12
 
